src/test/ui/E0662.stderr
error[E0662]: input operand constraint contains '='
  --> $DIR/E0662.rs:6:12
   |
LL |          : "=test"("a")
   |            ^^^^^^^

error: aborting due to previous error

