src/test/ui/E0662.rs
#![feature(asm)]

fn main() {
    asm!("xor %eax, %eax"
         :
         : "=test"("a") //~ ERROR E0662
        );
}
